--- a/modules/server/src/main/resources/templates/node/system/nginx.html
+++ b/modules/server/src/main/resources/templates/node/system/nginx.html
@@ -1,48 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head th:replace="common/head::head">
+<head>
+    <th:block th:include="common/head::head"></th:block>
+    <style>
+        .status .status-div {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            border: 1px solid #c1c1c1;
+        }
+
+        .status .status-run {
+            background-color: #05ff2d;
+        }
+
+        .status .status-stop {
+            background-color: #ff0000;
+        }
+    </style>
 </head>
 
 <body>
 <div class="layui-row">
     <button id="addNgx" class="layui-btn layui-btn-sm">新增nginx配置</button>
     <button onclick="reload();" class="layui-btn layui-btn-sm">刷新表格</button>
+    <div class="status" style="float: right;">
+        <div class="status-div"></div>
+        <span>未运行</span>
 
-    <button id="config" class="layui-btn layui-btn-sm">nginx配置</button>
-    <button id="open" class="layui-btn layui-btn-sm layui-bg-blue" style="display: none">启动nginx</button>
-    <button id="reload" class="layui-btn layui-btn-sm layui-bg-blue" style="display: none">重新加载nginx</button>
-    <button id="close" class="layui-btn layui-btn-sm layui-bg-orange" style="display: none">停止nginx</button>
+        <div class="layui-btn-group">
+            <button id="config" class="layui-btn layui-btn-sm">nginx配置</button>
+            <button id="open" class="layui-btn layui-btn-sm layui-bg-blue" style="display: none">启动nginx</button>
+            <button id="reload" class="layui-btn layui-btn-sm layui-bg-blue" style="display: none">重新加载nginx</button>
+            <button id="close" class="layui-btn layui-btn-sm layui-bg-orange" style="display: none">停止nginx</button>
+        </div>
+    </div>
+
 </div>
 <table class="layui-table" id="tab_ngx" lay-filter="tab_ngx" style="margin: 0;"></table>
-
-<div style="display: none;padding: 20px;" id="div_conf">
-    <form action="./updateConf" class="layui-form" id="form_conf">
-        <div class="layui-form-item">
-            <div class="layui-inline">
-                <label class="layui-form-label">服务名称</label>
-                <div class="layui-input-block">
-                    <input type="text" id="name" name="name" placeholder="服务名称" class="layui-input" required
-                           lay-verify="required">
-                </div>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <div class="layui-inline">
-                <label class="layui-form-label">状态</label>
-                <div class="layui-input-block">
-                    <input type="radio" name="status" value="open" title="启动">
-                    <input type="radio" name="status" value="close" title="停止">
-                </div>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <div class="layui-input-block">
-                <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
-            </div>
-        </div>
-    </form>
-</div>
 
 </body>
 <script type="text/html" id="bar_ngx">
@@ -138,15 +135,25 @@
                         layer.msg(ret.msg);
                         return;
                     }
-                    var data = ret.data;
-                    $('#name').val(data.name);
-                    $("input[value='" + data.status + "']").attr("checked", true);
-                    form.render();
-                    layer.open({
-                        type: 1,
-                        title: '编辑',
-                        content: $('#div_conf'),
-                        area: ['60%', '80%']
+
+                    layer.prompt({
+                        title: '输入新的服务名称',
+                        formType: 0,
+                        value: ret.data.name
+                    }, function (val, index) {
+                        loadingAjax({
+                            url: './updateConf',
+                            data: {
+                                name: val
+                            },
+                            success: function (data) {
+                                layer.msg(data.msg);
+                                if (200 == data.code) {
+                                    layer.close(index);
+                                    getStatus();
+                                }
+                            }
+                        });
                     });
                 }
             });
@@ -205,12 +212,16 @@
                         return;
                     }
                     var data = ret.data;
-                    var isOpen = "open" === data.status;
-                    if (isOpen) {
+                    var status = $(".status");
+                    if (data.status) {
                         $('#close').css("display", "inline");
                         $('#reload').css("display", "inline");
                         $('#open').css("display", "none");
+                        status.find(".status-div").addClass('status-run').removeClass('status-stop');
+                        status.find("span").text('运行中');
                     } else {
+                        status.find(".status-div").removeClass('status-run').addClass('status-stop');
+                        status.find("span").text('未运行');
                         $('#open').css("display", "inline");
                         $('#close').css("display", "none");
                         $('#reload').css("display", "none");
@@ -218,20 +229,6 @@
                 }
             });
         }
-
-        //监听提交
-        form.on('submit(formDemo)', function (data) {
-            loadingAjax({
-                url: './updateConf',
-                data: data.field,
-                success: function (ret) {
-                    getStatus();
-                    layer.msg(ret.msg);
-                    layer.closeAll('page');
-                }
-            });
-            return false;
-        });
     }
 
     function reload() {
