--- a/modules/server/src/main/resources/templates/common/head.html
+++ b/modules/server/src/main/resources/templates/common/head.html
@@ -340,6 +340,13 @@
             document.body.appendChild(script);
         }
 
+        function autoClose() {
+            setTimeout(function () {
+                var index = parent.layer.getFrameIndex(window.name);
+                parent.layer.close(index);
+                parent.location.reload();
+            }, 2000);
+        }
     </script>
 
     <script id="jsCommonContext" type="text/html"
