--- a/modules/server/src/main/resources/templates/monitor/edit.html
+++ b/modules/server/src/main/resources/templates/monitor/edit.html
@@ -129,11 +129,7 @@
                 success: function (data) {
                     layer.msg(data.msg);
                     if (200 == data.code) {
-                        setTimeout(function () {
-                            var index = parent.layer.getFrameIndex(window.name);
-                            parent.layer.close(index);
-                            parent.location.reload();
-                        }, 1500);
+                        autoClose();
                     }
                 }
             });
